fixed the card delete scroll, centered no data available, right align change major button, commented out pfre route again

--- a/resources/src/sass/_card.scss
+++ b/resources/src/sass/_card.scss
@@ -68,6 +68,7 @@
     }
 
     &__no-data{
+        text-align: center;
         padding-top: 3.5rem;
         padding-bottom: 3.5rem;
         &--mobile{
